2010-07-04  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/44596
	PR fortran/44745
	* trans-types.c (gfc_get_derived_type): Derived type fields
	with the vtype attribute must have TYPE_REF_CAN_ALIAS_ALL set.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@161801 138bc75d-0d04-0410-961f-82ee72b054a4